--- a/public/tags/templates/index.html
+++ b/public/tags/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <head>
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="http://localhost:1313/tags/templates/" />
+<link rel="canonical" href="https://adalrikus.github.io/tags/templates/" />
 
 
     <title>
@@ -22,16 +22,16 @@
 
 
 
-<link rel="stylesheet" href="http://localhost:1313/main.949191c1dcc9c4a887997048b240354e47152016d821198f89448496ba42e491.css" integrity="sha256-lJGRwdzJxKiHmXBIskA1TkcVIBbYIRmPiUSElrpC5JE=">
+<link rel="stylesheet" href="https://adalrikus.github.io/main.949191c1dcc9c4a887997048b240354e47152016d821198f89448496ba42e491.css" integrity="sha256-lJGRwdzJxKiHmXBIskA1TkcVIBbYIRmPiUSElrpC5JE=">
 
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="http://localhost:1313/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-    <link rel="manifest" href="http://localhost:1313/site.webmanifest">
-    <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg" color="">
-    <link rel="shortcut icon" href="http://localhost:1313/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://adalrikus.github.io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://adalrikus.github.io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://adalrikus.github.io/favicon-16x16.png">
+    <link rel="manifest" href="https://adalrikus.github.io/site.webmanifest">
+    <link rel="mask-icon" href="https://adalrikus.github.io/safari-pinned-tab.svg" color="">
+    <link rel="shortcut icon" href="https://adalrikus.github.io/favicon.ico">
     <meta name="msapplication-TileColor" content="">
 
 
@@ -43,7 +43,7 @@
 
 
 
-    <meta property="og:url" content="http://localhost:1313/tags/templates/">
+    <meta property="og:url" content="https://adalrikus.github.io/tags/templates/">
   <meta property="og:site_name" content="Portfolio">
   <meta property="og:title" content="Templates">
   <meta property="og:locale" content="en">
@@ -56,7 +56,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/tags/templates/index.xml" title="Portfolio" />
+<link rel="alternate" type="application/rss+xml" href="https://adalrikus.github.io/tags/templates/index.xml" title="Portfolio" />
 
 
 
@@ -74,7 +74,7 @@
         <div class="container">
             <header class="header">
     <span class="header__inner">
-        <a href="http://localhost:1313/" style="text-decoration: none;">
+        <a href="https://adalrikus.github.io/" style="text-decoration: none;">
     <div class="logo">
         
             <span class="logo__mark">&gt;</span>
@@ -93,7 +93,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="http://localhost:1313/about/">About</a></li><li><a href="http://localhost:1313/posts/">Posts</a></li>
+    <ul class="menu__inner"><li><a href="https://adalrikus.github.io/about/">About</a></li><li><a href="https://adalrikus.github.io/posts/">Posts</a></li>
     </ul>
 </nav>
 
@@ -125,7 +125,7 @@
                 <ul class="posts-list">
                     
                         <li class="post-item">
-                            <a href="http://localhost:1313/posts/2014/04/hugo-template-primer/" class="post-item-inner">
+                            <a href="https://adalrikus.github.io/posts/2014/04/hugo-template-primer/" class="post-item-inner">
                                 <span class="post-title">(Hu)go Template Primer</span>
                                 <span class="post-day">
                                     
@@ -155,9 +155,9 @@
     <div class="footer__inner">
         <div class="footer__content">
             <span>&copy; 2023</span>
-            <span><a href="http://localhost:1313/"></a></span>
+            <span><a href="https://adalrikus.github.io/"></a></span>
             <span><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></span>
-            <span><a href="http://localhost:1313/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
+            <span><a href="https://adalrikus.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
             
         </div>
     </div>
@@ -178,7 +178,7 @@
 
 
 
-<script type="text/javascript" src="http://localhost:1313/bundle.min.85fad2de4f13fec3bcb3b3cb10430cdb44a7b4a9749b32938241a5c6e77718df7624f1002b880521fdc26e24ec1077fda214bf1cb36ee3045510760d09638cae.js" integrity="sha512-hfrS3k8T/sO8s7PLEEMM20SntKl0mzKTgkGlxud3GN92JPEAK4gFIf3CbiTsEHf9ohS/HLNu4wRVEHYNCWOMrg=="></script>
+<script type="text/javascript" src="https://adalrikus.github.io/bundle.min.85fad2de4f13fec3bcb3b3cb10430cdb44a7b4a9749b32938241a5c6e77718df7624f1002b880521fdc26e24ec1077fda214bf1cb36ee3045510760d09638cae.js" integrity="sha512-hfrS3k8T/sO8s7PLEEMM20SntKl0mzKTgkGlxud3GN92JPEAK4gFIf3CbiTsEHf9ohS/HLNu4wRVEHYNCWOMrg=="></script>
 
 
 
